# haymaker-m365-workloads

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  workload.yaml
.github/workflows/: deploy-pages.yml
docs/: _config.yml  ai-email-generation.md  architecture.md  configuration.md  index.md
examples/: ai-email-deployment.yaml  basic-deployment.yaml
src/haymaker_m365_workloads/: __init__.py  workload.py
src/haymaker_m365_workloads/content/: __init__.py  email_generator.py  prompts.py
src/haymaker_m365_workloads/identity/: __init__.py  user_manager.py
src/haymaker_m365_workloads/models/: __init__.py  worker.py
src/haymaker_m365_workloads/operations/: __init__.py  orchestrator.py
