[project]
name = "haymaker-m365-workloads"
version = "0.1.0"
description = "M365 Knowledge Worker workloads for Agent Haymaker"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Haymaker Team" }
]
keywords = ["m365", "microsoft365", "haymaker", "workload", "knowledge-worker"]

[project.urls]
Homepage = "https://github.com/rysweet/haymaker-m365-workloads"
Repository = "https://github.com/rysweet/haymaker-m365-workloads"
Issues = "https://github.com/rysweet/haymaker-m365-workloads/issues"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agent-haymaker>=0.1.0",
    "azure-identity>=1.14.0",
    "msgraph-sdk>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
ai = [
    "anthropic>=0.18.0",  # For AI-powered email generation
]

# Register workload with agent-haymaker
[project.entry-points."agent_haymaker.workloads"]
m365-knowledge-worker = "haymaker_m365_workloads:M365KnowledgeWorkerWorkload"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haymaker_m365_workloads"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
